scripts/tests/errors/err_stack_overflow_recursion.bu
// Test: infinite recursion must produce clean error, not crash
// Expected: runtime error "Stack overflow"

def bomb() {
    bomb();
}

bomb();
